labs/lab-08/latest-tag-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: latest-tag
  namespace: policy-lab
  labels:
    app: test
    team: test
spec:
  containers:
    - name: web
      image: nginx:latest
